--- a/_config.yml
+++ b/_config.yml
@@ -7,9 +7,9 @@ version: 2
 
 # Personal info
 name: Vladyslav Alieiev
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+title: Hog Operation Supervisor
+email: vladyslav.alieiev@gmail.com
+website: none
 
 # Dark Mode (true/false/never)
 darkmode: false
