--- a/_config.yml
+++ b/_config.yml
@@ -16,13 +16,12 @@ darkmode: false
 
 # Social links
 twitter_username: lieiev
-github_username:  sproogen
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+instagram_username: lieiev
+linkedin_username: vladyslav-aieieiv-46179619b
 # xing_username: jekyll
 # pinterest_username: jekyll
 youtube_username: globalmtb
