--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ instagram_username: lieiev
 linkedin_username: vladyslav-aieieiv-46179619b
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: globalmtb
+youtube_username: 
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
