--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ darkmode: false
 twitter_username: lieiev
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
-# facebook_username: jekyll
+facebook_username: lieiev
 # flickr_username: jekyll
 instagram_username: lieiev
 linkedin_username: vladyslav-aieieiv-46179619b
@@ -29,10 +29,10 @@ youtube_username:
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links:
-- title: itsgoingto.be
-  icon: fas fa-globe
-  url: https://www.itsgoingto.be
+# additional_links:
+- title: 
+  icon: 
+  url: 
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
