--- a/_config.yml
+++ b/_config.yml
@@ -24,12 +24,12 @@ instagram_username: lieiev
 linkedin_username: vladyslav-aieieiv-46179619b
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: 
+# youtube_username: 
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-additional_links: 
+# additional_links: 
 - title: 
   icon: 
   url: 
