--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site
-repository: alieiev95/cv
+repository: sproogen/modern-resume-theme
 favicon: images/favicon.ico
 
 # Content configuration version
