--- a/_config.yml
+++ b/_config.yml
@@ -30,7 +30,7 @@ linkedin_username: vladyslav-aieieiv-46179619b
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
-# additional_links:
+additional_links:
 - title: itsgoingto.be
   icon: fas fa-globe
   url: https://www.itsgoingto.be
