--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ linkedin_username: vladyslav-aieieiv-46179619b
 additional_links:
 - title: itsgoingto.be
   icon: fas fa-globe
-  url: https://www.itsgoingto.be
+  url: 
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
