--- a/_config.yml
+++ b/_config.yml
@@ -6,26 +6,26 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Vladyslav Alieiev
-title: Hog Operation Supervisor
-email: vladyslav.alieiev@gmail.com
-# website: www.github.com/sproogen/resume-theme
+name: Brett Harris
+title: Senior Network System Administrator
+email: brett.h@email.co.uk
+website: www.github.com/sproogen/resume-theme
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: lieiev
-# github_username:  sproogen
+twitter_username: facespics
+github_username:  sproogen
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
-facebook_username: lieiev
+# facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: lieiev
-linkedin_username: vladyslav-aieieiv-46179619b
+instagram_username: jameswgrant
+linkedin_username: jameswgrant
 # xing_username: jekyll
 # pinterest_username: jekyll
-# youtube_username: globalmtb
+youtube_username: globalmtb
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
@@ -33,7 +33,7 @@ linkedin_username: vladyslav-aieieiv-46179619b
 additional_links:
 - title: itsgoingto.be
   icon: fas fa-globe
-  url: 
+  url: https://www.itsgoingto.be
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -44,10 +44,10 @@ additional_links:
 # gtag: "UA-00000000-0"
 # google_analytics: "UA-00000000-0"
 
- # About Section
+# About Section
 # about_title: About Me
- about_profile_image: images/profile.jpg
- about_content: | # this will include new lines to allow paragraphs
+about_profile_image: images/profile.jpg
+about_content: | # this will include new lines to allow paragraphs
   Hi, my name's Brett and I'm a senior network system administrator. As well as administrating systems I also have experience making software and web apps. I have worked at a number of companies gaining teamwork and leadership skills.
 
   I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
