--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: Brett Harris
-title: Senior Network System Administrator
-email: brett.h@email.co.uk
-website: www.github.com/sproogen/resume-theme
+name: Vladyslav Alieiev
+title: Hog Operation Supervisor
+email: vladyslav.alieiev@gmail.com
+website: 
 
 # Dark Mode (true/false/never)
 darkmode: false
