--- a/_config.yml
+++ b/_config.yml
@@ -76,8 +76,8 @@ content:
            * cleaning sheds with machines (Manitou MLT-X732, Manitou MLT-526 Turbo, Merlo, Bobcat 226B);
            * disinfection with lime;
            * transporting hay on tractor Arion 620c with a pitchfork and scattering it around the shed on Bobcat;
-           * sorting pigs by gender, size and loading into a truck;
-           * transporting piglets from one farm to another in a truck;
+           * sorting pigs by gender, size and loading into the truck;
+           * transporting piglets from one farm to another in the truck;
            * medication to sick pigs and general pig management.
 
   - title: Education # Title for the section
