--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,15 @@ content:
            * sorting pigs by gender, size and loading into the truck;
            * transporting piglets from one farm to another in the truck;
            * medication to sick pigs and general pig management.
-
+      - layout: right
+        title: Westpork Pty Ltd, WA, Australia
+        # link: boringcompany.com
+        # link_text: boringcompany.com
+        sub_title: General assistant farm hand
+        caption:  27/09/2018 to 13/10/2019
+        description: | # this will include new lines to allow paragraphs
+        
+        
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
