--- a/_config.yml
+++ b/_config.yml
@@ -79,7 +79,7 @@ content:
            * sorting pigs by gender, size and loading into the truck;
            * transporting piglets from one farm to another in the truck;
            * medication to sick pigs and general pig management.
-      - layout: right
+      - layout: left
         title: Centrum Valley Farms, IA, USA
         # link: boringcompany.com
         # link_text: boringcompany.com
