--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ content:
     layout: list # Type of content section (list/text)
     content:
       - layout: left
-        title: Coles Farms Inc, NC, USA
+        title: Coles Farms Inc, NC USA
         # link: boringcompany.com
         # link_text: boringcompany.com
         sub_title: Trainee
@@ -67,7 +67,7 @@ content:
            * breeding: insemination, hit check, sows movement;
            * feeding and treatment of sick sows and piglets, cleaning dead with a tractor Kubota.
       - layout: left
-        title: Westpork Pty Ltd, WA, Australia
+        title: Westpork Pty Ltd, WA Australia
         # link: boringcompany.com
         # link_text: boringcompany.com
         sub_title: General assistant farm hand
@@ -80,7 +80,7 @@ content:
            * transporting piglets from one farm to another in the truck;
            * medication to sick pigs and general pig management.
       - layout: left
-        title: Centrum Valley Farms, IA, USA
+        title: Centrum Valley Farms IA, USA
         # link: boringcompany.com
         # link_text: boringcompany.com
         sub_title: Barn Worker/Mechanic
