--- a/_config.yml
+++ b/_config.yml
@@ -73,12 +73,12 @@ content:
         sub_title: General assistant farm hand
         caption:  27/09/2018 to 13/10/2019
         description: | # this will include new lines to allow paragraphs
-           * cleaning sheds with machines (Manitou MLT-X732, Manitou MLT-526 Turbo, Merlo, Bobcat 226B);
-           * disinfection with lime;
-           * transporting hay on tractor Arion 620c with a pitchfork and scattering it around the shed on Bobcat;
-           * sorting pigs by gender, size and loading into the truck;
-           * transporting piglets from one farm to another in the truck;
-           * medication to sick pigs and general pig management.
+           + cleaning sheds with machines (Manitou MLT-X732, Manitou MLT-526 Turbo, Merlo, Bobcat 226B);
+           + disinfection with lime;
+           + transporting hay on tractor Arion 620c with a pitchfork and scattering it around the shed on Bobcat;
+           + sorting pigs by gender, size and loading into the truck;
+           + transporting piglets from one farm to another in the truck;
+           + medication to sick pigs and general pig management.
       - layout: left
         title: Centrum Valley Farms IA, USA
         # link: boringcompany.com
