--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ content:
            * feeding and treatment of sick sows and piglets, cleaning dead with a tractor Kubota.
       - layout: left
         title: Westpork Pty Ltd, WA Australia
-        # link: boringcompany.com
+        link: http://westpork.com.au
         # link_text: boringcompany.com
         sub_title: General assistant farm hand
         caption:  27/09/2018 to 13/10/2019
@@ -81,7 +81,7 @@ content:
            + medication to sick pigs and general pig management.
       - layout: left
         title: Centrum Valley Farms IA, USA
-        # link: boringcompany.com
+        link: http://www.centrumvalleyfarms.com
         # link_text: boringcompany.com
         sub_title: Barn Worker/Mechanic
         caption:  21/03/2016 to 20/03/2017
@@ -89,7 +89,13 @@ content:
           * repair: food belts, belts that raise eggs, belts with chicken manure, egg belts, ventilation system;
           * checking mortality chickens, cleaning in the barns;
           * replacement: ventilation motors and pumps.
-        
+        - layout: left
+        title: Centrum Valley Farms IA, USA
+        link: http://www.centrumvalleyfarms.com
+        # link_text: boringcompany.com
+        sub_title: Barn Worker/Mechanic
+        caption:  21/03/2016 to 20/03/2017
+        description: | # this will include new lines to allow paragraphs
   - title: Education # Title for the section
     layout: list # Type of content section (list/text)
     content:
