--- a/_config.yml
+++ b/_config.yml
@@ -68,8 +68,8 @@ content:
            * feeding and treatment of sick sows and piglets, cleaning dead with a tractor Kubota.
       - layout: left
         title: Westpork Pty Ltd, WA Australia
-        link: westpork.com.au
-        link_text: http://westpork.com.au/
+        link: http://westpork.com.au/
+        link_text: westpork.com.au
         sub_title: General assistant farm hand
         caption:  27/09/2018 to 13/10/2019
         description: | # this will include new lines to allow paragraphs
@@ -81,8 +81,8 @@ content:
            + medication to sick pigs and general pig management.
       - layout: left
         title: Centrum Valley Farms IA, USA
-        link: centrumvalleyfarms.com
-        link_text: http://www.centrumvalleyfarms.com/
+        link: http://www.centrumvalleyfarms.com/
+        link_text: centrumvalleyfarms.com
         sub_title: Barn Worker/Mechanic
         caption:  21/03/2016 to 20/03/2017
         description: | # this will include new lines to allow paragraphs
@@ -91,8 +91,8 @@ content:
           * replacement: ventilation motors and pumps.
       - layout: left
         title: Valleyfair, MN, USA
-        link: valleyfair.com
-        link_text: https://www.valleyfair.com/
+        link: https://www.valleyfair.com/
+        link_text: valleyfair.com
         sub_title: Ride Operator
         caption:   10/05/2015 – 09/09/2015
         description: | # this will include new lines to allow paragraphs
