--- a/_config.yml
+++ b/_config.yml
@@ -114,11 +114,11 @@ content:
         link: https://www.mnau.edu.ua/
         link_text: mnau.edu.ua
         caption: 01/09/2012 – 30/06/2017
-        sub_title: Agroengineering on Power and Engineering Faculty
+        sub_title: Bachelor’s Degree 
         quote: >
-          Bachelor’s Degree
+          Agroengineering on Power and Engineering Faculty
         description: | # this will include new lines to allow paragraphs
-          During my time at Harvard I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+          During my time at university I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
 
   - title: A Little More About Me
     layout: text
