--- a/_config.yml
+++ b/_config.yml
@@ -123,14 +123,12 @@ content:
   - title: A Little More About Me
     layout: text
     content: | # this will include new lines to allow paragraphs
-      Alongside my interests in networks and software engineering some of my other interests and hobbies are:
-      - Rock climbing
-      - Gaming
-      - Knitting
-      - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
+      Alongside my interests in swine production some of my other interests and hobbies are:
+      - Kickboxing (trained after university for 4 years)
+      - Сhess (played for 7 years in the school, currently playing rarely)
+      - Reading general education literature 
+      - Doing sports with own weight + jogging
 
-      Look at this cool image  
-      ![Trees](/modern-resume-theme/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
