--- a/_config.yml
+++ b/_config.yml
@@ -48,10 +48,8 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Vlad and I'm a Hog Supervisor. As well as work on a farm I also have experience driving agricultural machinery such as: Manitou, Bobcat, Arion etc. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Vlad and I'm a Hog Supervisor. As well as work on a <mark>farm</mark> I also have experience driving agricultural machinery such as: Manitou, Bobcat, Arion etc. I have worked at a number of companies gaining teamwork and leadership skills.
   
-  I am most skilled in: <mark>AWS</mark> and <mark>Eating Pizza</mark>
-
 content:
   - title: Experience # Title for the section
     layout: list # Type of content section (list/text)
