--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Hi, my name's Vlad and I'm a Hog Supervisor. As well as work on a <mark>farm</mark> I also have experience driving agricultural machinery such as: Manitou, Bobcat, Arion etc. I have worked at a number of companies gaining teamwork and leadership skills.
+  Hi, my name's Vlad and I'm a Hog Supervisor. As well as work on a <mark>farm</mark> I also have experience driving agricultural <mark>machinery</mark> such as: Manitou, Bobcat, Arion etc. I have worked at a number of companies gaining teamwork and leadership skills.
   
 content:
   - title: Experience # Title for the section
@@ -116,7 +116,7 @@ content:
         quote: >
           Agroengineering on Power and Engineering Faculty
         description: | # this will include new lines to allow paragraphs
-          During my time at university I learnt most of my key skills that have I have taken through my career such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy work life balance.
+          During my time at university I learnt most of my key skills that have I have taken through my <mark>career</mark> such as teamwork and working to tight deadlines. I thouroughly enjoyed my time as university and learnt a lot about a healthy <mark>work</mark> life balance.
 
   - title: A Little More About Me
     layout: text
