--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ content:
         description: | # this will include new lines to allow paragraphs
            * breeding of sows and gilts - both artificial insemination and natural;
            * barn maintenance and routine repair & record keeping;
-           * vaccinating animals according to bam health protocol, feeding and treatment of injured or sick animals;
+           * vaccinating animals according to bam health protocol, feeding and treatment of injured or sick animals.
       - layout: left
         title: Coles Farms Inc, NC, USA
         # link: boringcompany.com
