--- a/_config.yml
+++ b/_config.yml
@@ -133,8 +133,8 @@ content:
     content: | # this will include new lines to allow paragraphs
       Driving license: passenger car; trucks up to 16,500 pounds 
       - I have 6 years of the car driving experience;
-      ~ 450 hours of driving Manitou & Bobcat (cleaning sheds); 
-      ~ 300 hours of driving tractor Arion 620c / Kubota M9540 & 3 ton truck (transporting piglets & hogs).
+      - 450 hours of driving Manitou & Bobcat (cleaning sheds); 
+      - 300 hours of driving tractor Arion 620c / Kubota M9540 & 3 ton truck (transporting piglets & hogs).
 
       Alongside my interests in swine production some of my other interests and hobbies are:
       - kickboxing (trained after the lectures in the university for 4 years);
