--- a/_config.yml
+++ b/_config.yml
@@ -59,11 +59,12 @@ content:
         link: https://www.sunterrafarms.ca/
         link_text: sunterrafarms.ca
         sub_title: Specialized livestock worker
-        caption:  14/09/2021 to (current time)
+        caption:  17/08/2021 to (current time)
         description: | # this will include new lines to allow paragraphs
+           * farrowing: assisting pregnant sows, sorting baby pigs, pressure washing, collecting hungry piglets, health check, processing;
            * breeding of sows and gilts - both artificial insemination and natural;
            * barn maintenance and routine repair & record keeping;
-           * vaccinating animals according to bam health protocol, feeding and treatment of injured or sick animals.
+           * vaccinating animals according to barn health protocol, feeding and treatment of injured or sick animals.
       - layout: left
         title: Coles Farms Inc, NC, USA
         # link: boringcompany.com
