--- a/_config.yml
+++ b/_config.yml
@@ -48,7 +48,7 @@ additional_links:
 # about_title: About Me
 about_profile_image: images/profile.jpg
 about_content: | # this will include new lines to allow paragraphs
-  Specialist in Operation, Machinery and Equipment of Agribusiness and able to solve unique tasks related to the maintenance and use of mechanized technologies of production, primary processing, storage and transportation of agricultural products. Expert management of mechanized technological processes and production units that provide technical support for an agro-industrial enterprise, with a proven record of elimination of failures.
+  Specialist in <mark>Operation</mark>, <mark>Machinery</mark> and <mark>Equipment</mark> of Agribusiness and able to solve unique tasks related to the <mark>maintenance</mark> and use of mechanized technologies of production, primary processing, storage and transportation of agricultural products. Expert management of mechanized technological processes and production units that provide technical support for an agro-industrial enterprise, with a proven record of elimination of failures.
   
 content:
   - title: Experience # Title for the section
