--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ version: 2
 
 # Personal info
 name: Vladyslav Alieiev
-title: Specialized livestock worker
+title: Specialist in Operation, Machinery and Equipment of Agribusiness
 email: vladyslav.alieiev@gmail.com
 website: 
 
