--- a/_config.yml
+++ b/_config.yml
@@ -41,10 +41,11 @@ content:
         sub_title: Specialized livestock worker
         caption:  24/08/2021 to (current time)
         description: | # this will include new lines to allow paragraphs
-           * farrowing: assisting pregnant sows, sorting baby pigs, pressure washing, collecting hungry piglets, health check, processing;
-           * breeding of sows and gilts - both artificial insemination and natural;
-           * barn maintenance and routine repair & record keeping;
-           * vaccinating animals according to barn health protocol, feeding and treatment of injured or sick animals.
+           * Provide agricultural livestock services such as artificial insemination, assisting pregnant sows and sorting new-borns
+           * Recognize and treat certain livestock health problems
+           * Maintain livestock performance records
+           * Work closely with all staff to meet monthly farrowing and mortality targets
+           * Vaccinate animals according to farm protocols
       - layout: left
         title: Coles Farms Inc, NC, USA
         # link: boringcompany.com
